--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         paths: [
           '/README',
 		  '/5.assistant/it',
-		  '/1.material/logistics',
+		  '/5.assistant/logistics',
 		  '/5.assistant/5.1.portal/0.readme.md',
 		  '/5.assistant/5.1.portal/1.about.md',
 		  '/5.assistant/5.1.portal/2.admissions.md',
