--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         paths: [
           '/README',
 		  '/5.assistant/it',
+		  '/5.assistant/it_network',
+		  '/5.assistant/finance',
+		  '/5.assistant/logistics',
+		  
 		  '/5.assistant/logistics',
 		  '/5.assistant/5.1.portal/0.readme.md',
 		  '/5.assistant/5.1.portal/1.about.md',
