--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           '/README',
 		  '/5.assistant/it',
 		  '/5.assistant/it_network',
+		  '/5.assistant/it_office',
 		  '/5.assistant/finance',
 		  '/5.assistant/logistics',
 		  
