--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     search: {
         paths: [
           '/README',
+		  '/3.academicAffairs/training',
 		  '/5.assistant/it',
 		  '/5.assistant/it_network',
 		  '/5.assistant/it_office',
